--- a/icstoJson/index.html
+++ b/icstoJson/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <script src="script.js"></script>
+    <script src="script.js" type="module" defer></script>
     <title>Hello World</title>
 </head>
 <body>
     <h1>Hello World</h1>
+    <pre id="result"></pre>
+    <button id="btn">Convert</button>
+
 </body>
 </html>
